--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "type": "module",
   "dependencies": {
     "@apollo/server": "^4.9.3",
+    "dotenv": "^16.3.1",
     "graphql": "^16.8.1",
     "path": "^0.12.7",
     "sequelize": "^6.33.0"
