--- a/package.json
+++ b/package.json
@@ -2,20 +2,23 @@
   "name": "ancient-gaming",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node src/index.js",
+    "dev": "tsc src/index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "module",
+  "module": "commonjs",
   "dependencies": {
     "@apollo/server": "^4.9.3",
     "dotenv": "^16.3.1",
+    "fs": "^0.0.1-security",
     "graphql": "^16.8.1",
     "path": "^0.12.7",
-    "sequelize": "^6.33.0"
+    "sequelize": "^6.33.0",
+    "sqlite3": "^5.1.6"
   }
 }
