--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node build/src/index.js",
-    "dev": "tsc src/index.ts"
+    "init": "npm install & tsc"
   },
   "keywords": [],
   "author": "",
